final edit, fixed width bug on github button mobile

--- a/styles/sass/_portfolioPage.scss
+++ b/styles/sass/_portfolioPage.scss
@@ -75,7 +75,7 @@
             }
         }
         .githubRepo {
-            width: 6.25rem;
+            width: 6.5rem;
         }
     }
     i {
