--- a/styles/style.css
+++ b/styles/style.css
@@ -875,7 +875,7 @@ ul.headerNav .headerMenuItems {
 }
 
 .portfolioPage .portfolioLinks .githubRepo {
-  width: 6.25rem;
+  width: 6.5rem;
 }
 
 .portfolioPage i {
